Add persistent node setup